<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="2">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/noOfCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_categories"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_category"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/noOfSubCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_sub_categories"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dishes"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/noOfDishes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_dishes"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customers"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/noOfCustomers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_customers"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card6"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orders"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/noOfOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_orders"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card7"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/branches"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/noOfBranches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_branches"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</GridLayout>
