<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    tools:context=".CategoryFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateSubDialogCloseButton"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_back_24"
            app:iconSize="32dp" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/sub_category_update"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/subcategoryUpdateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:scaleX="0.85"
        android:scaleY="0.85"
        android:text="@string/active"
        android:textSize="16sp"
        app:useMaterialThemeColors="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subcategoryUpdateNameField"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:hint="@string/sub_category_name"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subcategoryNameUpdateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subcategoryUpdateDescriptionField"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:hint="@string/sub_category_description"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subcategoryUpdateDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/select_image_to_update" />

    <ImageButton
        android:id="@+id/subImageUpdateButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/add_image"
        android:scaleType="center"
        tools:src="@tools:sample/avatars" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/updateSubCategory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/update_sub_category" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/subUpdateProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="#EF0606" />
    </FrameLayout>

</LinearLayout>