<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_columnWeight="1"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="3dp">


                <TextView
                    android:id="@+id/dishDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dishName"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dishName" />

                <TextView
                    android:id="@+id/dishCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dishDescription"
                    android:layout_marginTop="8dp"
                    android:text="@string/category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dishDescription" />

                <TextView
                    android:id="@+id/dishSubcategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dishCategory"
                    android:layout_marginTop="8dp"
                    android:text="@string/sub_category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dishCategory" />

                <TextView
                    android:id="@+id/dishRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dishSubcategory"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dishSubcategory" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.ouattararomuald.slider.ImageSlider
                android:id="@+id/dish_image_slider"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portions_and_prices"
            android:layout_marginTop="5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dishPricesViewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dishRating"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="5dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dish_options"
            android:layout_marginTop="5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dishOptionsViewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/dishPricesViewRecyclerView"
            tools:layout_editor_absoluteY="150dp"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/dishAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:scaleX="0.85"
            android:scaleY="0.85"
            android:text="@string/active"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dishOptionsViewRecyclerView"
            app:useMaterialThemeColors="true" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
